fix parallax on mobile

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -38,7 +38,7 @@ hr{
   position: relative;
   z-index: 0;
   .parallax{
-    height: 1000px;
+    height: 100vh;
     background-image: url(../../images/bg-home.png);
     background-attachment: fixed;
     background-position: center;
@@ -49,13 +49,16 @@ hr{
     width: 397px;
     height: 84px;
     object-fit: contain;
-    position: fixed ;
+    position: fixed;
     top:40%;
     left: 50%;
     transform: translateX(-50%);
+    @media(max-width: 500px){
+      position: absolute;
+    }
   }
   &__title{
-    position: fixed ;
+    position: fixed;
     font-size: calc(48px + (110 - 48) * (100vw - 320px) / (1920 - 320));
     top:53%;
     left: 50%;
@@ -64,6 +67,9 @@ hr{
     line-height: 1.02;
     letter-spacing: 0.9px;
     white-space: nowrap;
+    @media(max-width: 500px) {
+      position: absolute;
+    }
   }
 }
 .main{
